--- a/docs/src/assets/styles.css
+++ b/docs/src/assets/styles.css
@@ -1,1 +1,12 @@
+/*
+ #include assets/styles/!fonts.css
+ @path: /assets/fonts/
+*/
 
+body {
+  font-family: var(--font-text);
+}
+
+code {
+  font-family: var(--font-code);
+}
