--- a/docs/src/assets/styles/!fonts.css
+++ b/docs/src/assets/styles/!fonts.css
@@ -2,47 +2,38 @@
   font-family: "text";
   font-style: normal;
   font-weight: normal;
-  src: url("/assets/fonts/normal.woff2") format("woff2");
+  src: url("/*@path*/normal.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "text";
   font-style: normal;
   font-weight: bold;
-  src: url("/assets/fonts/bold.woff2") format("woff2");
+  src: url("/*@path*/bold.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "text";
   font-style: italic;
   font-weight: normal;
-  src: url("/assets/fonts/italic.woff2") format("woff2");
+  src: url("/*@path*/italic.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "text";
   font-style: normal;
   font-weight: 300;
-  src: url("/assets/fonts/lighter.woff2") format("woff2");
+  src: url("/*@path*/lighter.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "code";
   font-style: normal;
   font-weight: normal;
-  src: url("/assets/fonts/mono.woff2") format("woff2");
+  src: url("/*@path*/mono.woff2") format("woff2");
 }
 
 :root {
   --font-text: "text", system-ui, sans-serif !important;
   --font-code: "code", ui-monospace, monospace !important;
-}
-
-
-body {
-  font-family: var(--font-text);
-}
-
-code {
-  font-family: var(--font-code);
 }
